# pcmax

./: CMakeLists.txt  build.sh  common.hpp  kernel.cl  main.cpp  opencl.hpp  output.json  output2.json  output3.json
include/pcmax/: Instance.hpp  opencl.hpp  utils.hpp
include/pcmax/solvers/: BruteForceSolverOcl.hpp  BruteForceSolverParalell.hpp  BruteForceSolverSeq.hpp  Solver.hpp
instances/: m3.txt  m30.txt
instances/my/: 1.txt  2.txt  3.txt  my_instance.txt  my_small_instance.txt
modes/: ocl.hpp  par.hpp  syn.hpp
opencl/: info.cpp  kernel.cl  kernel.cl.old  main.cpp  opencl.hpp
scripts/: benchmark  config.json  config.json.2  generate.py  instance_generator  plotter  proxy
src/kernel/: kernel.cl
src/pcmax/: main.cpp
